from typing import Dict, Any, Optional

class Model:
    """Base class for AI model interactions."""
    
    async def generate_response(
        self,
        query: str,
        context: Dict[str, Any]
    ) -> str:
        """Generate a response using the AI model."""
        # Simple implementation for testing
        return f"Processed query: {query} with context: {len(context)} items" 